...
      "string": "Widget"
    },
    "edit": {
      "string": "Widget Feed"
    },
    "edit_default": {
      "string": "Default"
    },
    "edit_custom": {
      "string": "Custom"
    },
    "edit_description": {
      "string": "Please select which fields you want to display in the {name} widget."
    },
    "source": {
      "string": "Source"
...
