...
							<View style={styles.actions}>
								<TouchableOpacity
									style={styles.actionButton}
									activeOpacity={0.7}
									color="transparent"
									hitSlop={{ top: 15, bottom: 15 }}
									testID="WidgetActionDelete"
									onPress={onDelete}>
									<TrashIcon width={22} />
								</TouchableOpacity>
								<TouchableOpacity
									style={styles.actionButton}
									activeOpacity={0.7}
									color="transparent"
									hitSlop={{ top: 15, bottom: 15 }}
									testID="WidgetActionEdit"
									onPress={onEdit}>
									<SettingsIcon width={22} />
								</TouchableOpacity>
								<TouchableOpacity
									style={styles.actionButton}
									activeOpacity={0.7}
...
